refactor: remove all unnecessary warning